--- a/arch/arm/configs/jf_defconfig
+++ b/arch/arm/configs/jf_defconfig
@@ -342,7 +342,7 @@ CONFIG_I2C_GPIO=y
 CONFIG_I2C_QUP=y
 CONFIG_SPI=y
 CONFIG_SPI_QUP=y
-CONFIG_SPI_SPIDEV=y
+CONFIG_SPI_SPIDEV=m
 CONFIG_SLIMBUS_MSM_CTRL=y
 CONFIG_DEBUG_GPIO=y
 CONFIG_GPIO_SYSFS=y
