--- a/arch/arm/configs/jf_defconfig
+++ b/arch/arm/configs/jf_defconfig
@@ -104,6 +104,18 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVEX=y
+CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_ROW=y
+CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_FIFO=y
+CONFIG_IOSCHED_noop=y
+CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_CPU_IDLE=y
 CONFIG_SEC_DVFS=y
 CONFIG_VFP=y
@@ -698,12 +710,6 @@ CONFIG_WTL_ENCRYPTION_FILTER=y
 CONFIG_KEYS=y
 CONFIG_KEYS_DEBUG_PROC_KEYS=y
 
-# Add rooting prevention
-CONFIG_SEC_RESTRICT_ROOTING=y
-CONFIG_SEC_RESTRICT_SETUID=y
-CONFIG_SEC_RESTRICT_FORK=y
-CONFIG_SEC_RESTRICT_ROOTING_LOG=y
-
 # Fork hang detection
 CONFIG_SEC_FORKHANG_DEBUG=y
 
@@ -718,3 +724,7 @@ CONFIG_TIMA_LOG=y
 # CONFIG_USB_GSPCA is not set
 CONFIG_CRYPTO_RNG=y
 CONFIG_CRYPTO_ANSI_CPRNG=y
+CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_KSM=y
+CONFIG_UKSM=y
+
